--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "font-awesome": "4.7.0",
     "ol": "^5.3.3",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.4.0",
     "react-bootstrap-sweetalert": "^5.1.9",
     "react-dom": "^16.8.6",
     "react-notifications-component": "^2.3.0",
